--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,10 @@ h1 {
     font-size: 4em;
 }
 
-nav {
+/* nav {
     font-family: 'Josefin Slab', serif;
     font-size: 2em;
-}
+} */
 
 body {
     font-family: 'Josefin Slab', serif;
@@ -27,9 +27,9 @@ a {
 }
 
 a:hover {
-    color: #C37960;
+    color: #A65C43;
     text-decoration: underline;
-    text-decoration-color: #C37960;
+    text-decoration-color: #A65C43;
 }
 
 header {
@@ -54,6 +54,8 @@ nav {
 nav a {
     margin-left: 55px;
     margin-right: 55px;
+    font-family: 'Josefin Slab', serif;
+    font-size: 2em;
 }
 
 
@@ -66,7 +68,7 @@ nav a {
     margin-bottom: 70px;
     position: relative;
     text-align: center;
-    color: #C37960;
+    color: #A65C43;
 }
 
 .slide {
@@ -103,7 +105,7 @@ nav a {
 .carousel-caption {
     background-color: transparent;
     font-family: 'Sacramento', cursive;
-    color: #C37960;
+    color: #A65C43;
     font-size: 4em;
     line-height: 1em;
     position: absolute;
@@ -143,4 +145,61 @@ nav a {
 .product-price {
     font-size: 1.3em;
     margin-top: 5px;
+}
+
+/* Product Detail */
+
+.back-to-browse {
+    font-size: 1.2em;
+}
+
+.detail-container {
+    display: flex;
+}
+
+.detail-original-container {
+    margin-left: 50px;
+}
+
+.detail-original-img {
+    width: 728px;
+    border: 1px solid black;
+}
+
+.detail-name {
+    font-size: 3em;
+    margin: 0;
+}
+
+.detail-price {
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+.detail-original-desc {
+    font-size: 1.5em;
+}
+
+.detail-dropdown {
+    font-size: 1.5em;
+    display: block;
+    margin-bottom: 20px;
+}
+
+select {
+    font-family: 'Josefin Slab', serif;
+    font-size: 1em;
+    border-radius: 5px;
+}
+
+.add-to-cart {
+    width: 360px;
+    font-family: 'Josefin Slab', serif;
+    font-size: 2em;
+    border-radius: 12px;
+    padding: 5px;
+    padding-top: 8px;
+    background-color: #894E3F;
+    color: #ffffff;
+    border: 1px solid black;
 }
