--- a/styles.css
+++ b/styles.css
@@ -226,11 +226,15 @@ select {
 
 .cart-container {
     display: flex;
+    flex-wrap: wrap;
+    /* flex-direction: column;
+    justify-items: center; */
     margin: 0 auto;
     width: 750px;
     height: 630px;
     border: 1px solid black;
     border-radius: 12px;
+    margin-bottom: 10%;;
 }
 
 .cart-items {
@@ -238,6 +242,7 @@ select {
     width: 750px;
     justify-content: center;
     padding: 86px 100px;
+    border-radius: 12px;
 }
 
 .cart-img {
@@ -278,4 +283,30 @@ select {
 .cart-X {
     width: 28px;
     height: 28px;
+}
+
+.cart-total {
+    font-size: 2em;
+    margin: 0 auto;
+    align-self: center;
+}
+
+.check-out-btn-div {
+    width: 100%;
+    height: 67px;
+}
+
+.check-out-btn {
+    width: 40%;
+    display: block;
+    margin: 0 auto;
+    height: 67px;
+    font-family: 'Josefin Slab', serif;
+    font-size: 2em;
+    border-radius: 12px;
+    padding: 5px;
+    padding-top: 8px;
+    background-color: #894E3F;
+    color: #ffffff;
+    border: 1px solid black;
 }
