--- a/Homework_6/styles.css
+++ b/Homework_6/styles.css
@@ -191,9 +191,6 @@ nav a {
     border: 1px solid black;
 }
 
-#cart-hover-name {
-}
-
 #p-cart-hover-qty,
 #cart-hover-qty,
 #p-cart-hover-glaze,
@@ -372,4 +369,134 @@ select {
     background-color: #894E3F;
     color: #ffffff;
     border: 1px solid black;
+}
+
+/* Tracking Page */
+
+.tracking-container {
+    border: 1px solid black;
+    border-radius: 12px;
+    margin-bottom: 50px;
+}
+
+.line {
+    flex-grow: 1;
+    height: 160px;
+    border-bottom: 1px solid black;
+}
+
+/* Tracking - borders */
+.top-tracking-container,
+.progress-bar-container {
+    border-bottom: 1px solid black;
+}
+
+.progress-bar-container {
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+.your-order-container {
+    border-right: 1px solid black;
+}
+
+/* Tracking - flex */
+
+.progress-bar-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.bottom-tracking-container {
+    display: flex;
+}
+
+/* Tracking - top */
+
+.est-deliv {
+    font-size: 2.5em;
+    font-weight: 700;
+    padding-left: 35px;
+}
+
+.tracking-num {
+    font-size: 2em;
+    padding-left: 35px;
+}
+
+/* Tracking - progress bar */
+
+.progress-group {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.ordered-bar-icon-container {
+    border: 1px solid black;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    background-color: #A65C43;
+    
+    /* centers icon within containter */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.progress-bar-icon-container {
+    border: 1px solid black;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+
+    /* centers icon within containter */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ordered-progress-label {
+    font-size: 2em;
+    color: #A65C43;
+}
+
+.progress-label {
+    font-size: 2em;
+}
+
+.progress-bar-icon {
+    width: 70px;
+    background-color: transparent;
+}
+
+/* Tracking - bottom */
+
+.your-order-container {
+    padding-left: 35px;
+    border-bottom-left-radius: 12px;
+    width: 50%;
+}
+.contact-store-container {
+    padding-left: 35px;
+    border-bottom-right-radius: 12px;
+    width: 50%;
+}
+
+.bottom-tracking-container {
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+}
+
+.bottom-tracking-heading {
+    font-size: 2em;
+}
+
+.bottom-tracking-label {
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.bottom-tracking-content {
+    font-size: 1.2em;
 }
