--- a/Homework_6/styles.css
+++ b/Homework_6/styles.css
@@ -397,6 +397,13 @@ select {
     border: 1px solid black;
 }
 
+.check-out-btn:hover {
+    cursor: pointer;
+    background-color: #A65C43;
+}
+
+
+
 /* Tracking Page */
 
 .tracking-container {
