Pointer over X in cart on hover

--- a/Homework_6B/styles.css
+++ b/Homework_6B/styles.css
@@ -385,6 +385,10 @@ select {
     height: 28px;
 }
 
+.cart-X:hover {
+    cursor: pointer;
+}
+
 .cart-total {
     font-size: 2em;
     margin: 0 auto;
