--- a/Homework_8/styles.css
+++ b/Homework_8/styles.css
@@ -57,7 +57,6 @@ html body {                         /* Bootstrap defaults to white background un
 }
 
 .initial-p {
-    width: 50%;
     margin: 0 auto;
     text-align: center;
     color: #ffffff;
@@ -65,7 +64,7 @@ html body {                         /* Bootstrap defaults to white background un
 
 #initial-home-bulb {
     display: block;
-    margin: 4% auto 2% auto;
+    margin: 0 auto 2% auto;
 }
 
 #click-on-lightbulb {
@@ -77,5 +76,16 @@ html body {                         /* Bootstrap defaults to white background un
     margin: 0 auto;
     opacity: 0;
     position: relative;
-    bottom: 475px;
+    bottom: 50%;
+    /* bottom: 75%; */
+    /* bottom: 475px; */
+}
+
+/* media query #main-pipes bottom */
+
+#initial-home-bulb:hover,
+#sun-word:hover,
+#wind-word:hover,
+#water-word:hover {
+    cursor: pointer;
 }
