--- a/Homework_8/styles.css
+++ b/Homework_8/styles.css
@@ -11,6 +11,15 @@ html body {                     /* Bootstrap defaults to white background unless
     background-color: #02004B;
 }
 
+#initial-home-body {            /* so it doesn't scroll */
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    overflow: hidden;
+}
+
 /* LANDING PAGE */
 
 .landing-h1 {
@@ -50,7 +59,7 @@ html body {                     /* Bootstrap defaults to white background unless
     color: #ffffff;
     font-size: 1.5em;
     text-align: center;
-    margin-top: 7%;
+    margin-top: 4%;
     margin-bottom: 4%;
 }
 
@@ -60,6 +69,7 @@ html body {                     /* Bootstrap defaults to white background unless
 }
 
 .initial-p {
+    font-size: 0.9em;
     margin: 0 auto;
     text-align: center;
     color: #ffffff;
@@ -78,16 +88,12 @@ html body {                     /* Bootstrap defaults to white background unless
     display: none;
     margin: 0 auto;
     opacity: 0;
+    height: 360px;
     position: relative;
-    /* bottom: 80%; */
-    /* bottom: 75%; */
-    /* bottom: 775px;     */
-        /* for viewport height 900 */
-    bottom: 450px;          
-        /* for viewport height 600 */
+    bottom: 250px;
 }
 
-/* media query #main-pipes bottom */
+/* media query #main-pipes bottom? */
 
 #initial-home-bulb:hover,
 #sun-word:hover,
@@ -97,18 +103,20 @@ html body {                     /* Bootstrap defaults to white background unless
 }
 
 #initial-home-bulb {
-    /* width: 1440px; */
-    height: 600px;
-    /* height: 900px; */
-    /* width: 1200px;   1440 */
-    /* height: 750px;  900*/
-}
 
-/* #main-pipes {
-    width: 40%;
-    height: 40%;
-} */
+    /* NO SCROLL */
+    height: 300px;
+
+    /* margin: 0 auto; */
+
+}
 
 #modal-close {
     margin-left: 90%;
+}
+
+#back-btn {
+    position: absolute;
+    bottom: 10%;
+    z-index: 1;
 }
