--- a/Homework_8/styles.css
+++ b/Homework_8/styles.css
@@ -84,7 +84,8 @@ html body {                     /* Bootstrap defaults to white background unless
 #back-to-landing {
     color: #FFFFFF;
     float: left;
-    padding: 1%;
+    padding-left: 1%;
+    padding-top: 1%;
     animation-name: back-to-landing-hover;
     animation-duration: 250ms;
     animation-timing-function: ease-in;
@@ -106,6 +107,7 @@ html body {                     /* Bootstrap defaults to white background unless
     text-align: center;
     margin-top: 6%;
     margin-bottom: 4%;
+    padding: 15px 0;
 }
 
 .initial-span {
