--- a/Homework_8/styles.css
+++ b/Homework_8/styles.css
@@ -105,9 +105,9 @@ html body {                     /* Bootstrap defaults to white background unless
     color: #ffffff;
     font-size: 1.5em;
     text-align: center;
-    margin-top: 6%;
+    margin-top: 5%;
     margin-bottom: 4%;
-    padding: 15px 0;
+    padding: 20px 10px 0 10px;          /* so it doesn't get pushed by the back button when resizing */
 }
 
 .initial-span {
@@ -120,6 +120,7 @@ html body {                     /* Bootstrap defaults to white background unless
     margin: 0 auto;
     text-align: center;
     color: #ffffff;
+    padding: 0 15px;            /* so there's some space between the edges when resizing */
 }
 
 #initial-home-bulb {
